// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> test should render primary buttons correctly 1`] = `
.emotion-0 {
  color: var(--color-text-primary);
  background-color: transparent;
  display: inline-block;
  border: none;
  outline: none;
  font-family: Inter,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",Helvetica,sans-serif;
  font-weight: 600;
  font-size: 1rem;
  white-space: nowrap;
  border-radius: 0.375rem;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  padding: 1rem 1.5rem;
  line-height: 1;
  background-color: var(--color-highlight);
  background-image: linear-gradient(180deg, var(--color-highlight-light), var(--color-highlight));
  color: #ffffff;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  box-shadow: inset 0 0 0 1px var(--accents-2);
  color: transparent;
  pointer-events: none;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  background: var(--accents-1);
}

<button
  className="emotion-0"
  disabled={false}
>
  My primary button
</button>
`;

exports[`<Button /> test should render small buttons correctly 1`] = `
.emotion-0 {
  color: var(--color-text-primary);
  background-color: transparent;
  display: inline-block;
  border: none;
  outline: none;
  font-family: Inter,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",Helvetica,sans-serif;
  font-weight: 600;
  font-size: 1rem;
  white-space: nowrap;
  border-radius: 0.375rem;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  padding: 0.75rem 1rem;
  line-height: 1;
  box-shadow: inset 0 0 0 1px var(--color-text-secondary);
  -webkit-transition: box-shadow 0.2s ease;
  transition: box-shadow 0.2s ease;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  box-shadow: inset 0 0 0 1px var(--accents-2);
  color: transparent;
  pointer-events: none;
}

.emotion-0:hover {
  box-shadow: inset 0 0 0 2px var(--color-text-primary);
}

<button
  className="emotion-0"
  disabled={false}
>
  My small button
</button>
`;
